tests/ui/traits/no-fallback-multiple-impls.stderr
error[E0425]: cannot find function `missing` in this scope
  --> $DIR/no-fallback-multiple-impls.rs:12:5
   |
LL |     missing();
   |     ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
